--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,104 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext {
+        kotlin_version = "1.4.10"
+        nav_version = "2.3.0"
+        gradle_version = '4.1.2'
+        ktlint_version = "10.0.0"
+
+        appcompat_version = "1.1.0"
+        support_version = "1.1.0"
+        legacy_version = "1.0.0"
+        core_ktx_version = "1.3.0"
+        constraint_version = "1.1.3"
+        navigation_version = "2.3.0"
+        material_version = "1.3.0-alpha01"
+        lifecycle_version = "2.2.0"
+        paging_version = "2.1.2"
+        coroutines_version = "1.3.5"
+        coroutines_adapter_version = "0.9.2"
+        koin_version = "2.1.6"
+        retrofit_version = "2.7.2"
+        moshi_version = "1.9.2"
+        okhttp_version = "4.4.0"
+        glide_version = "4.11.0"
+        anko_version = "0.10.8"
+        rx_java = "2.2.6"
+        rx_android = "2.1.0"
+        rx_binding = "2.0.0"
+        gson = "2.8.5"
+        gif_drawable = "1.2.19"
+        multidex_version = "2.0.1"
+
+        test_junit_version = "4.13"
+        test_ext_junit_version = "1.1.1"
+        test_espresso_version = "3.2.0"
+
+        testDependencies = [
+                junit       : "junit:junit:$test_junit_version",
+                extJunit    : "androidx.test.ext:junit:$test_ext_junit_version",
+                espressoCore: "androidx.test.espresso:espresso-core:$test_espresso_version"
+        ]
+
+        supportDependencies = [
+                appCompat       : "androidx.appcompat:appcompat:$appcompat_version",
+                constraintLayout: "androidx.constraintlayout:constraintlayout:$constraint_version",
+                legacySupport   : "androidx.legacy:legacy-support-v4:$legacy_version",
+                recyclerView    : "androidx.recyclerview:recyclerview:$support_version",
+                material        : "com.google.android.material:material:$material_version",
+                coreKtx         : "androidx.core:core-ktx:$core_ktx_version",
+                kotlin          : "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
+                glide           : "com.github.bumptech.glide:glide:$glide_version",
+                glideCompiler   : "com.github.bumptech.glide:compiler:$glide_version",
+                anko            : "org.jetbrains.anko:anko:$anko_version",
+                ankoCommon      : "org.jetbrains.anko:anko-common:$anko_version",
+                gifDrawable     : "pl.droidsonroids.gif:android-gif-drawable:$gif_drawable",
+                multiDex        : "androidx.multidex:multidex:$multidex_version"
+        ]
+
+        architectureDependencies = [
+                navFragment         : "androidx.navigation:navigation-fragment:$navigation_version",
+                navUi               : "androidx.navigation:navigation-ui:$navigation_version",
+                navFragmentKtx      : "androidx.navigation:navigation-fragment-ktx:$navigation_version",
+                navUiKtx            : "androidx.navigation:navigation-ui-ktx:$navigation_version",
+                lifecycleExtension  : "androidx.lifecycle:lifecycle-extensions:$lifecycle_version",
+                lifecycleViewModel  : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
+                paging              : "androidx.paging:paging-runtime:$paging_version"
+        ]
+
+        diDependencies = [
+                koinCore    : "org.koin:koin-core:$koin_version",
+                koinAndroid : "org.koin:koin-android:$koin_version",
+                koinVm      : "org.koin:koin-androidx-viewmodel:$koin_version",
+                koinTest    : "org.koin:koin-test:$koin_version"
+        ]
+
+        networkDependencies = [
+                coroutinesCore      : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version",
+                coroutinesAndroid   : "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version",
+                coroutinesTest      : "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version",
+                coroutinesAdapter   : "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$coroutines_adapter_version",
+                retrofit            : "com.squareup.retrofit2:retrofit:$retrofit_version",
+                retrofitMoshi       : "com.squareup.retrofit2:converter-moshi:$retrofit_version",
+                okhttp              : "com.squareup.okhttp3:logging-interceptor:$okhttp_version",
+                moshi               : "com.squareup.moshi:moshi:$moshi_version",
+                moshiKotlin         : "com.squareup.moshi:moshi-kotlin:$moshi_version",
+                rxAndroid           : "io.reactivex.rxjava2:rxandroid:$rx_android",
+                rxJava              : "io.reactivex.rxjava2:rxjava:$rx_java",
+                rxBinding           : "com.jakewharton.rxbinding2:rxbinding:$rx_binding",
+                gson                : "com.google.code.gson:gson:$gson"
+        ]
+    }
     repositories {
         google()
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlint_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,9 +109,18 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+task installGitHook(type: Copy) {
+    from new File(rootProject.rootDir, 'pre-commit')
+    into { new File(rootProject.rootDir, '.git/hooks') }
+    fileMode 0777
+}
+
+tasks.getByPath(':app:preBuild').dependsOn installGitHook
